Fix responsiveness on mobile devices

--- a/stylesheet/hero.css
+++ b/stylesheet/hero.css
@@ -5,6 +5,10 @@
     transition: .5s;
 
     scroll-margin-top: 200px;
+
+    @media (max-width:800px) {
+        height: fit-content;
+    }
 }
 
 .hero-content{
@@ -17,8 +21,11 @@
     @media (max-width:800px) {
         flex-direction: column;
         flex-flow: column-reverse;
-
+        width: 90%;
+        justify-content: center;
+        align-items: center;
         transition: .5s;
+        height: fit-content;
     }
 }
 
@@ -28,9 +35,10 @@
     
     /*animation: fade-in-left-right 1s ease-in-out;*/
     @media (max-width:800px) {
-        width: 90%;
-
+        width: 100%;
         transition: .5s;
+        padding: 0;
+        margin: -90px 0 0 0;
     }
 }
 
@@ -43,6 +51,11 @@
     transition: .5s;
 
     /*animation: fade-in-right-left 1s ease-in-out;*/
+    @media (max-width:600px) {
+        transform: scale(50%);
+        padding: 80px 0 0 0;
+        margin: 0;
+    }
 }
 
 #main-image{
@@ -140,7 +153,7 @@
 
     @media (max-width:800px) {
         text-align: center;
-
+        font-size: 24px;
         transition: .5s;
     }
 }
